feat: update DAO and add hikari pool